[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lotus_seed_maintenance_tool"
version = "0.1.0"
authors = [
    { name="minint", email="minint.dsk@gmail.com" },
]
description = "updater and maintenance tool for lotus server"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MININT2/lotus-server-stack"
"Bug Tracker" = "https://github.com/MININT2/lotus-server-stack/issues"